Adding later version of paper

--- a/cites.bib
+++ b/cites.bib
@@ -123,7 +123,7 @@ month={Oct},}
 @book{dijkstra,
  author = {Dijkstra, Edsger W.},
  title = {A Discipline of Programming},
- year = {1997},
+ year = {1976},
  isbn = {013215871X},
  publisher = {Prentice Hall PTR},
  address = {Upper Saddle River, NJ, USA},
@@ -182,9 +182,58 @@ month={Oct},}
  acmid = {1789293},
  publisher = {Springer-Verlag},
 } 
+@unpublished{ornaments1,
+	author = {Conor McBride},
+	title = {Ornamental Algebras, Algebraic Ornaments},
+	year = {2010},
+	note = {Manuscript available online},
+	url = {http://personal.cis.strath.ac.uk/~conor/pub/OAAO/Ornament.pdf}
+}
+@inproceedings{ornaments2,
+ author = {Dagand, Pierre-Evariste and McBride, Conor},
+ title = {Transporting Functions Across Ornaments},
+ booktitle = {Proceedings of the 17th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '12},
+ year = {2012},
+ isbn = {978-1-4503-1054-3},
+ location = {Copenhagen, Denmark},
+ pages = {103--114},
+ numpages = {12},
+ doi = {10.1145/2364527.2364544},
+ publisher = {ACM},
+} 
+@article{ornaments3,
+ title={The essence of ornaments}, 
+ volume={27}, 
+ DOI={10.1017/S0956796816000356}, 
+ journal={Journal of Functional Programming}, 
+ publisher={Cambridge University Press}, 
+ author={Dagand, Pierre-Evariste}, year={2017}}
+ @article{ornaments4,
+ author = {Williams, Thomas and R{\'e}my, Didier},
+ title = {A Principled Approach to Ornamentation in ML},
+ journal = {Proceedings of the ACM on Programming Languages},
+ issue_date = {January 2018},
+ volume = {2},
+ number = {POPL},
+ month = dec,
+ year = {2017},
+ issn = {2475-1421},
+ pages = {21:1--21:30},
+ articleno = {21},
+ numpages = {30},
+ doi = {10.1145/3158109},
+ publisher = {ACM},
+}
+@article{ornaments5, 
+title={Programming with ornaments}, 
+volume={27}, DOI={10.1017/S0956796816000307}, 
+journal={Journal of Functional Programming}, 
+publisher={Cambridge University Press}, 
+author={Ko, Hsiang-Shang and Gibbons, Jeremy}, year={2016}}
 @InProceedings{pvs,
 author="Owre, Sam
-and Rushby, John.
+and Rushby, John
 and Shankar, Natarajan",
 editor="Kapur, Deepak",
 title="PVS: A prototype verification system",
@@ -195,7 +244,7 @@ pages="748--752",
 isbn="978-3-540-47252-0"
 }
 @InProceedings{dafny,
-author="K. Rustan and M. Leino",
+author="K. Rustan M. Leino",
 editor="Clarke, Edmund M.
 and Voronkov, Andrei",
 title="Dafny: An Automatic Program Verifier for Functional Correctness",
