--- a/README
+++ b/README
@@ -1,8 +1,7 @@
-This contains the source code for the TyDe 2019 submission, "Deferring the details and deriving programs".
+This contains the source code for the TyDe 2019 paper, "Deferring the details and deriving programs".
 
+The paper pre-print (will shortly be) available on my personal website.
 
-Right now, all the source code is in a (rough) state in test2.lagda.
+The Agda source code is in the src directory. The file Index.agda outlines the various modules in the development.
 
-I will clean it up into a library in the coming days.
-
--Liam O'Connor
+The paper directory contains the (ugly) LaTeX source code for the paper, and the talk directory contains the (ugly) LaTeX source code for the talk slides. 
