--- a/talk/talk.tex
+++ b/talk/talk.tex
@@ -385,6 +385,7 @@
 \end{code}
     \end{frame}
     \begin{frame}{Ugly}
+        This technique is very powerful! \pause \textbf{\alert{but...}}
         \begin{code}
 \>[2]\AgdaFunction{ls}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1175,10 +1176,10 @@ Each assertion generates a proof obligation for \alert{\textbf{later}} proof.\pa
 \end{code}
 };
 \pause
-\node at (0.6,-0.6) {
-    \includegraphics[width=3cm]{phantom.png}
-};
-\pause
+%\node at (0.6,-0.6) {
+%    \includegraphics[width=3cm]{phantom.png}
+%};
+%\pause
 \node[text width=7cm] at (0,-4) {
 \begin{code}
 \>[2]\AgdaFunction{swp}\AgdaSpace{}%
